# leetcode

./: CMakeLists.txt  README.md  main.cpp  nbl.cpp  testhead.h
TMP/: checkPrime.h  checkprime.h  fastpow.h
array/: countPyramids_2088.h  countVowels_2063.h  getAverages_2090.h  goodDaysToRobBank_2100.h  maxDistToClosest_849.h  minOperations_2033.h  minimumDeletions_2091.h  minimumRefill_2105.h  missRolls.cpp  numMagicSquaresInside_840.h  stoneGameIX.cpp  subArrayRanges_2104.h  uniqueLetterString_828.h  wateringPlants_2079.h  waysToPartition.cpp
bfs/: getDirections_2096.h  minimumOperations_2059.h  networkBecomesIdle_2039.h
binary_search/: kthSmallestProduct_2040.h  maxProfitAssignment.cpp  maxTaskAssign_2071.h  minimizedMaximum_2064.h  minimumDifference_2035.h  numFriendRequests.cpp  platesBetweenCandles_2055.h
design/: LRU_cache_146.h  RangeFreqQuery_2080.h  RobotII_2069.h  SORTracker_2102.h  bank_2043.h  sharedPtr.h  singleLinkList.h  stockPrice_2034.h  uniquePtr.h
dfs/: countCombinations_2056.h  countMaxOrSubsets_2044.h  kMirror_2081.h  largestIsland_827.h  maximalPathQuality_2065.h  maximumDetonation_2101.h  rectangleArea_850.h  validArrangement_2097.h
dfs_memo/: possiblyEquals_2060.h
dp/: countPyramids_2088.h  new21Game_837.h
graph/: secondMinimum_2045.h
greedy/: minCost_2087.h  minimumBuckets_2086.h
hash/: findAllPeople_2092.h  numFactoredBinaryTrees.cpp  smallestSubsequence.cpp
heap/: minimumTime_2050.h
intervals problem/: maxTwoEvents_2054.h
list/: deleteMiddle_2095.h  nodesBetweenCriticalPoints_2058.h  reverseEvenLengthGroups_2074.h
(+16 files in other folders)
